fixed button alignment

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,6 @@
     text-transform: uppercase;
     letter-spacing: 1.3px;
     font-weight: 600;
-    float:right;
 }
 #links #info li {
     color: rgba(51, 51, 51, 0.8);
